# xmodem-linux

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  cmake_install.cmake  crc16.cpp  crc16.hpp  main.cpp  usart.cpp  usart.hpp  xmodem  xmodem.cpp  xmodem.hpp  xmodem_linux.cpp  xmodem_linux.hpp
build_ubuntu/: CMakeCache.txt  Makefile  cmake_install.cmake  test.txt  xmodem
